# SwiftSeek

./: .gitignore  CMakeLists.txt  README.md
config/: engine.yaml  logging.yaml
docs/: API.md  ARCHITECTURE.md  BENCHMARKS.md  DESIGN.md
examples/: batch_indexing.cpp  simple_search.cpp
scripts/: generate_report.py  run_benchmarks.sh
src/: CMakeLists.txt  main.cpp
src/benchmark/: benchmark_runner.cpp  benchmark_runner.hpp
src/cache/: lru_cache.hpp
src/core/automata/: aho_corasick.cpp  aho_corasick.hpp  aho_matcher.hpp
src/core/document/: document_store.cpp  document_store.hpp
src/core/inverted_index/: inverted_index.cpp  inverted_index.hpp  tokenizer.hpp
src/core/query/: query_executor.cpp  query_executor.hpp  query_parser.hpp
src/core/ranking/: tfidf.cpp  tfidf.hpp
src/profiler/: memory_profiler.hpp  time_profiler.hpp
src/utils/: file_utils.hpp  logger.hpp  string_utils.hpp
tests/performance/: test_cache_hit_ratio.cpp  test_naive_over_optimized.cpp
